--- a/Light_Data.ipynb
+++ b/Light_Data.ipynb
@@ -3160,8 +3160,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "39888572-c517-4245-a3db-81d6e2159666",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Find column names containing \"light\" or \"lux\" (case-insensitive)\n",
+    "light_cols <- grep(\"lux|light\", names(M[[ls(M)[4]]]), ignore.case = TRUE, value = TRUE)\n",
+    "# Subset the data frame to only those columns\n",
+    "light_data <- M[[ls(M)[4]]][ , light_cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "cb997f4a-f080-47d8-ba4b-3334c6a9844d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#create a csv with only light info\n",
+    "write.csv(light_data, file = \"metalong_light_subset.csv\", row.names = FALSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "391b0814-a48a-4f9b-ac3f-8b1b61cb7595",
    "metadata": {},
    "outputs": [],
    "source": []
